tests/error/struct_errors/non_guppy_func.err
Error: Not a Guppy method (at $FILE:12:4)
   | 
10 |     x: int
11 | 
12 |     def f(self: "MyStruct") -> None:
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
13 |         pass
   | ^^^^^^^^^^^^ Method `f` of struct `MyStruct` is not a Guppy function

Help: Add a `@guppy` annotation to turn `f` into a Guppy method

Guppy compilation failed due to 1 previous error
